--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,96 +36,59 @@
     "                               QLabel,\n",
     "                               QGridLayout\n",
     "                               )\n",
+    "from PySide6.QtCore import QTimer, QEventLoop\n",
     "import h5py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">> Browsing\n",
-      ">> Opened file at: patterns/1.hp\n",
-      ">> Click 'Plot' to view\n",
-      ">> Plotting patterns/1.hp\n",
-      ">> Number of patterns: 7\n",
-      ">> 1 forward\n",
-      ">> 1 forward\n",
-      ">> 1 forward\n",
-      ">> 1 forward\n",
-      ">> 1 forward\n",
-      ">> 1 forward\n",
-      ">> 1 forward\n",
-      ">> 1 forward\n",
-      ">> 1 forward\n",
-      ">> Deleted image at index 2\n",
-      ">> Browsing\n",
-      ">> Opened file at: patterns/0.hp\n",
-      ">> Click 'Plot' to view\n",
-      ">> Making a copy at: /Users/jonathanchoi/Desktop/GitHub Projects/crystal_GUI/patterns/trash/0_copy_1.hp\n",
-      ">> 1 forward\n",
-      ">> 1 forward\n",
-      ">> 1 forward\n",
-      ">> 1 forward\n",
-      ">> 1 forward\n",
-      ">> 1 forward\n",
-      ">> 1 forward\n",
-      ">> 1 forward\n",
-      ">> Browsing\n",
-      ">> Opened file at: patterns/0.hp\n",
-      ">> Click 'Plot' to view\n",
-      ">> Making a copy at: /Users/jonathanchoi/Desktop/GitHub Projects/crystal_GUI/patterns/trash/0_copy_2.hp\n",
-      ">> Plotting patterns/0.hp\n",
-      ">> Number of patterns: 1\n"
+      ">> Toggle Copy: True\n"
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "index 4 is out of bounds for axis 0 with size 1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[131], line 177\u001b[0m, in \u001b[0;36mFigurePlot.init_graph\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    174\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlen \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mall_patterns)\n\u001b[1;32m    176\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprint_terminal(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlotting \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mos\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mrelpath(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpath)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m>> Number of patterns: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlen\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)            \n\u001b[0;32m--> 177\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplot_graph\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[131], line 181\u001b[0m, in \u001b[0;36mFigurePlot.plot_graph\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    179\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mplot_graph\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m    180\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlen \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m--> 181\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcurr_pattern \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mall_patterns\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcurr_idx\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m    182\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maxes\u001b[38;5;241m.\u001b[39mclear()\n\u001b[1;32m    183\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maxes\u001b[38;5;241m.\u001b[39mimshow(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcurr_pattern, cmap\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 4 is out of bounds for axis 0 with size 1"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/qc/fc2g0sgj0pzcp12drdrxgt180000gn/T/ipykernel_75769/659613940.py:236: DeprecationWarning: 'exec_' will be removed in the future. Use 'exec' instead.\n",
+      "  loop.exec_()\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      ">> Toggle Copy: False\n",
+      ">> Toggle Copy: True\n",
+      ">> Toggle Copy: False\n",
       ">> Browsing\n",
-      ">> Opened file at: patterns/1.hp\n",
+      ">> Opened file at: patterns/test_1.hp\n",
       ">> Click 'Plot' to view\n",
-      ">> Plotting patterns/1.hp\n",
+      ">> Plotted patterns/test_1.hp\n",
       ">> Number of patterns: 6\n",
       ">> 1 forward\n",
+      ">> Pattern 2/6\n",
       ">> 1 forward\n",
-      ">> 1 forward\n",
-      ">> 1 forward\n",
-      ">> Deleted image at index 2\n",
-      ">> Deleted image at index 2\n",
-      ">> Deleted image at index 2\n",
-      ">> Deleted image at index 2\n",
-      ">> Deleted image at index 0\n",
+      ">> Pattern 3/6\n",
+      ">> Toggle Copy: True\n",
       ">> Browsing\n",
-      ">> Opened file at: patterns/0.hp\n",
+      ">> Making a copy at: patterns/trash/test_1_copy_3.hp\n",
+      ">> Opened file at: patterns/test_1.hp\n",
       ">> Click 'Plot' to view\n",
-      ">> Browsing\n",
-      ">> Opened file at: patterns/1.hp\n",
-      ">> Click 'Plot' to view\n",
-      ">> Plotting patterns/1.hp\n",
-      ">> Number of patterns: 1\n",
-      ">> Plotting patterns/1.hp\n",
-      ">> Number of patterns: 1\n",
       ">> 1 forward\n",
+      ">> Pattern 4/6\n",
       ">> 1 forward\n",
-      ">> 1 forward\n"
+      ">> Pattern 5/6\n",
+      ">> 1 forward\n",
+      ">> Pattern 6/6\n",
+      ">> 1 forward\n",
+      ">> Pattern 1/6\n"
      ]
     },
     {
@@ -134,7 +97,7 @@
        "0"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,8 +123,9 @@
     "        \n",
     "    def ui(self, *args, **kwargs):\n",
     "        # INSTRUCTIONS\n",
-    "        curr_file = QLabel(\"Please browse for a file to display\\n\\nNote, selecting 'Trash', will delete the \\nimage you've currently selected. \\nToggling 'Copy File' before browsing for a pattern\\n will make a copy of the file.\", self)\n",
-    "        curr_file.setStyleSheet(\n",
+    "        self.curr_file = QLabel(\"Please browse for a file to display\\n\\nNote, selecting 'Trash', will delete the \\nimage you've currently selected. \\nToggling 'Copy File' before browsing for a pattern\\n will make a copy of the file.\", self)\n",
+    "        self.curr_file.adjustSize()\n",
+    "        self.curr_file.setStyleSheet(\n",
     "            '''\n",
     "            color: #E8E8E8;\n",
     "            background-color: #2C2C2C;\n",
@@ -174,6 +138,7 @@
     "            font-size: 13pt;\n",
     "            '''\n",
     "        )\n",
+    "        self.curr_file.setFixedSize(500,300)\n",
     "        \n",
     "        # TERMINAL\n",
     "        self.terminal = QLabel(f\">>{self.output}\")\n",
@@ -190,16 +155,17 @@
     "            font-size: 13pt;\n",
     "            '''\n",
     "        )\n",
+    "        self.terminal.setFixedSize(500,150)\n",
     "        \n",
     "        text_layout = QVBoxLayout()\n",
-    "        text_layout.addWidget(curr_file)\n",
+    "        text_layout.addWidget(self.curr_file)\n",
     "        text_layout.addWidget(self.terminal)\n",
     "        \n",
     "        \n",
     "        # TOGGLE \n",
     "        self.button0 = QPushButton('Copy File')\n",
     "        self.button0.toggled.connect(self.copy_file)\n",
-    "        self.button0.setFixedSize(100, 30)\n",
+    "        self.button0.setFixedSize(100, 40)\n",
     "        self.button0.setCheckable(True)\n",
     "        self.button0.setStyleSheet( ## green\n",
     "            '''\n",
@@ -229,7 +195,7 @@
     "    \n",
     "        buttons = [self.button1, self.button2, self.button3, self.button4, self.button5, self.button6]\n",
     "        for button in buttons:\n",
-    "            button.setFixedSize(80, 30)\n",
+    "            button.setFixedSize(100, 40)\n",
     "            button.setStyleSheet( ## blue\n",
     "                '''\n",
     "                background: #1e90ff;\n",
@@ -287,11 +253,10 @@
     "            \"\",\"All Files (*);;Python Files (*.py)\", \n",
     "            options=opts)\n",
     "        self.path = file\n",
-    "        self.print_terminal(f\"Opened file at: {os.path.relpath(self.path)}\\n>> Click 'Plot' to view\")\n",
+    "\n",
     "        if self.make_copy:\n",
     "            \n",
     "            version = 0\n",
-    "            \n",
     "            trash_path = os.path.join(os.path.dirname(self.path), \"trash\")\n",
     "            if not os.path.exists(trash_path):\n",
     "                os.makedirs(trash_path)\n",
@@ -305,9 +270,12 @@
     "            copy_path = os.path.join(trash_path, split_path + f\"_copy_{version}.hp\")\n",
     "            self.print_terminal(f\"Making a copy at: {os.path.relpath(copy_path)}\")\n",
     "            shutil.copy(file, copy_path)\n",
-    "        \n",
+    "            self.delay(3)\n",
+    "            \n",
+    "        self.print_terminal(f\"Opened file at: {os.path.relpath(self.path)}\\n>> Click 'Plot' to view\")\n",
     "    def copy_file(self):\n",
     "        self.make_copy = not self.make_copy\n",
+    "        self.print_terminal(f\"Toggle Copy: {self.make_copy}\")\n",
     "\n",
     "    def init_graph(self, *args, **kwargs):\n",
     "        if self.path:\n",
@@ -331,16 +299,18 @@
     "                self.curr_idx += 1\n",
     "                if self.curr_idx == self.len:\n",
     "                    self.curr_idx = 0\n",
-    "                self.print_terminal(\"1 forward\")\n",
+    "                self.print_terminal(f\"1 forward\\n>> Pattern {self.curr_idx+1}/{self.len}\")\n",
     "            \n",
     "            else:\n",
     "                self.curr_idx -= 1\n",
     "                if self.curr_idx == -1:\n",
     "                    self.curr_idx = self.len - 1\n",
-    "                self.print_terminal(\"1 back\")\n",
+    "                self.print_terminal(f\"1 back\\n>> Pattern {self.curr_idx+1}/{self.len}\")\n",
     "            self.plot_graph()\n",
     "    \n",
     "    def close_mainwindow(self):\n",
+    "        self.terminal.setText(\">> Closing Application :)\")\n",
+    "        self.delay(0.5)\n",
     "        main_window = self.window()\n",
     "        if isinstance(main_window, QMainWindow):\n",
     "            main_window.close()\n",
@@ -357,18 +327,25 @@
     "                self.len = len(self.all_patterns)\n",
     "                if self.curr_idx >= self.len:\n",
     "                    self.curr_idx = 0\n",
-    "                self.output = f\">> Deleted image at index {deleted_index+1}\"\n",
-    "                print(self.output)\n",
-    "                self.terminal.setText(self.output)\n",
+    "                self.print_terminal(f\"Deleted image at index {deleted_index+1}\")\n",
     "                self.plot_graph()\n",
-    "                \n",
-    "    def print_terminal(self, message):\n",
-    "            self.output = f\">> {message}\"\n",
-    "            print(self.output)\n",
-    "            time.sleep(0.05)\n",
-    "            self.terminal.setText(\">>\")\n",
-    "            time.sleep(0.05)\n",
-    "            self.terminal.setText(self.output)\n",
+    "           \n",
+    "    def delay(self, seconds):\n",
+    "        timer = QTimer()\n",
+    "        timer.setSingleShot(True)  \n",
+    "        loop = QEventLoop()\n",
+    "        timer.timeout.connect(loop.quit)  \n",
+    "        timer.start(seconds * 1000)  \n",
+    "        loop.exec_()\n",
+    "        \n",
+    "    def print_terminal(self, message, seconds = 0.025):\n",
+    "            \n",
+    "        self.output = f\">> {message}\"\n",
+    "        print(self.output)\n",
+    "        self.delay(seconds)\n",
+    "        self.terminal.setText(\">>\")\n",
+    "        self.delay(seconds)\n",
+    "        self.terminal.setText(self.output)\n",
     "        \n",
     "class MainWindow(QMainWindow):\n",
     "    def __init__(self, *args, **kwargs):\n",
