Added library versions

--- a/test.ipynb
+++ b/test.ipynb
@@ -42,21 +42,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">> Toggle Copy: True\n"
+      ">> Browsing\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/qc/fc2g0sgj0pzcp12drdrxgt180000gn/T/ipykernel_75769/659613940.py:236: DeprecationWarning: 'exec_' will be removed in the future. Use 'exec' instead.\n",
+      "/var/folders/qc/fc2g0sgj0pzcp12drdrxgt180000gn/T/ipykernel_75769/2791551854.py:234: DeprecationWarning: 'exec_' will be removed in the future. Use 'exec' instead.\n",
       "  loop.exec_()\n"
      ]
     },
@@ -64,31 +64,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">> Toggle Copy: False\n",
-      ">> Toggle Copy: True\n",
-      ">> Toggle Copy: False\n",
-      ">> Browsing\n",
       ">> Opened file at: patterns/test_1.hp\n",
       ">> Click 'Plot' to view\n",
       ">> Plotted patterns/test_1.hp\n",
-      ">> Number of patterns: 6\n",
-      ">> 1 forward\n",
-      ">> Pattern 2/6\n",
-      ">> 1 forward\n",
-      ">> Pattern 3/6\n",
-      ">> Toggle Copy: True\n",
-      ">> Browsing\n",
-      ">> Making a copy at: patterns/trash/test_1_copy_3.hp\n",
-      ">> Opened file at: patterns/test_1.hp\n",
-      ">> Click 'Plot' to view\n",
-      ">> 1 forward\n",
-      ">> Pattern 4/6\n",
-      ">> 1 forward\n",
-      ">> Pattern 5/6\n",
-      ">> 1 forward\n",
-      ">> Pattern 6/6\n",
-      ">> 1 forward\n",
-      ">> Pattern 1/6\n"
+      ">> Number of patterns: 6\n"
      ]
     },
     {
@@ -97,7 +76,7 @@
        "0"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
