--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/qc/fc2g0sgj0pzcp12drdrxgt180000gn/T/ipykernel_75769/2791551854.py:234: DeprecationWarning: 'exec_' will be removed in the future. Use 'exec' instead.\n",
+      "/var/folders/qc/fc2g0sgj0pzcp12drdrxgt180000gn/T/ipykernel_99309/3464090362.py:235: DeprecationWarning: 'exec_' will be removed in the future. Use 'exec' instead.\n",
       "  loop.exec_()\n"
      ]
     },
@@ -64,10 +64,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">> Opened file at: patterns/test_1.hp\n",
+      ">> Opened file at: patterns/test_data.hp\n",
       ">> Click 'Plot' to view\n",
-      ">> Plotted patterns/test_1.hp\n",
-      ">> Number of patterns: 6\n"
+      ">> Plotted patterns/test_data.hp\n",
+      ">> Number of patterns: 3\n",
+      ">> 1 forward\n",
+      ">> Pattern 2/3\n",
+      ">> 1 forward\n",
+      ">> Pattern 3/3\n",
+      ">> 1 forward\n",
+      ">> Pattern 1/3\n",
+      ">> Browsing\n",
+      ">> Opened file at: patterns/trash/test_data_copy_1.hp\n",
+      ">> Click 'Plot' to view\n",
+      ">> Plotted patterns/trash/test_data_copy_1.hp\n",
+      ">> Number of patterns: 8\n",
+      ">> 1 forward\n",
+      ">> Pattern 2/8\n",
+      ">> 1 forward\n",
+      ">> Pattern 3/8\n",
+      ">> 1 forward\n",
+      ">> Pattern 4/8\n",
+      ">> 1 forward\n",
+      ">> Pattern 5/8\n",
+      ">> 1 forward\n",
+      ">> Pattern 6/8\n",
+      ">> 1 forward\n",
+      ">> Pattern 7/8\n",
+      ">> 1 forward\n",
+      ">> Pattern 8/8\n",
+      ">> 1 forward\n",
+      ">> Pattern 1/8\n",
+      ">> 1 forward\n",
+      ">> Pattern 2/8\n",
+      ">> 1 forward\n",
+      ">> Pattern 3/8\n",
+      ">> 1 forward\n",
+      ">> Pattern 4/8\n",
+      ">> 1 forward\n",
+      ">> Pattern 5/8\n",
+      ">> 1 forward\n",
+      ">> Pattern 6/8\n",
+      ">> 1 forward\n",
+      ">> Pattern 7/8\n",
+      ">> 1 forward\n",
+      ">> Pattern 8/8\n"
      ]
     },
     {
@@ -76,7 +117,7 @@
        "0"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +143,7 @@
     "        \n",
     "    def ui(self, *args, **kwargs):\n",
     "        # INSTRUCTIONS\n",
-    "        self.curr_file = QLabel(\"Please browse for a file to display\\n\\nNote, selecting 'Trash', will delete the \\nimage you've currently selected. \\nToggling 'Copy File' before browsing for a pattern\\n will make a copy of the file.\", self)\n",
+    "        self.curr_file = QLabel(\"Please browse for a file to display\\n\\nNote, selecting 'Trash', will delete the \\nimage you've currently selected. \\n\\nToggling 'Copy File' before browsing for a pattern\\n will make a copy of the file.\", self)\n",
     "        self.curr_file.adjustSize()\n",
     "        self.curr_file.setStyleSheet(\n",
     "            '''\n",
@@ -237,6 +278,7 @@
     "            \n",
     "            version = 0\n",
     "            trash_path = os.path.join(os.path.dirname(self.path), \"trash\")\n",
+    "            \n",
     "            if not os.path.exists(trash_path):\n",
     "                os.makedirs(trash_path)\n",
     "            \n",
